# logsh

./: .dockerignore  .gitignore  CMakeLists.txt  Containerfile  Containerfile.logsht  Dockerfile  README.md  vcpkg.json
.github/workflows/: auto-tag.yml  build-and-release.yaml
logsh/: CMakeLists.txt  Cargo.toml  build.rs  logsh.cpp  logsh.h
logsh/commands/: connect.cpp  connect.h  query.cpp  query.h
logsh/logsh-core/: Cargo.toml
logsh/logsh-core/src/: account.rs  common.rs  config.rs  connect.rs  csv.rs  error.rs  lib.rs  logship_client.rs  query.rs  subscription.rs  upload.rs
logsh/logsh-core/src/auth/: jwt.rs  mod.rs  oauth.rs
logsh/logsht/: Cargo.toml
logsh/logsht/src/: app.rs  backend.rs  event.rs  input.rs  main.rs  tui.rs  ui.rs
logsh/logsht/src/views/: account.rs  cell_detail.rs  context.rs  help.rs  mod.rs  query.rs  row_detail.rs  saved_queries.rs
logsh/shared/: Logger.cpp  configuration.cpp  configuration.h  logger.h
logsh/src/: account.rs  config.rs  connect.rs  error.rs  lib.rs  logger.rs  main.rs  query.rs  schema.rs  subscription.rs  upload.rs  version.rs  whoami.rs
logsh/src/fmt/: mod.rs  parse.rs
