[package]
name = "logsh"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"
lto = true

[dependencies]
logsh-core = { version = "0.1.0", path = "logsh-core" }
clap = { version = "4.3.22", features = ["derive"] }
pretty_env_logger = "0.5.0"
log = { version = "0.4.20" }
anyhow = "1.0.75"
rpassword = "7.2.0"
csv = "1.2.2"
serde_json = { version = "1.0", features = ["raw_value"] }
term-table = "1.3.2"

[build-dependencies]
anyhow = "1.0.75"
toml = "0.7.6"
