[package]
name = "logsh"
version = "0.0.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
opt-level = 3
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
logsh-core = { path = "logsh-core" }
clap = { version = "4.3.22", features = ["derive"] }
pretty_env_logger = "0.5.0"
log = { version = "0.4.20" }
anyhow = "1.0.75"
rpassword = "7.2.0"
csv = "1.2.2"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
term-table = "1.3.2"
self_update = "0.39.0"
tempfile = "3.8.0"
reqwest = "0.11.20"
colored = "2.0.4"

[build-dependencies]
anyhow = "1.0.75"
toml = "0.8.0"
