[package]
name = "logsh"
version = "0.0.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
opt-level = 3
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
logsh-core = { path = "logsh-core" }
clap = { version = "4.5.42", features = ["derive", "env"] }
pretty_env_logger = "0.5.0"
log = { version = "0.4.27" }
anyhow = "1.0.98"
rpassword = "7.4.0"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
term-table = "1.4.0"
self_update = { version = "0.42.0", features = ["archive-zip"] }
tempfile = "3.20.0"
reqwest = "0.12.22"
colored = "3.0.0"
annotate-snippets = "0.11.5"
humantime = "2.2.0"
uuid = { version = "1.17.0", features = ["serde"] }

[build-dependencies]
anyhow = "1.0.98"
toml = "0.9.4"
