[package]
name = "logsh-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { version = "1.2.2" }
home = "0.5.5"
log = { version = "0.4.20" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "1.0.47"
uuid = "1.4.1"
chrono = "0.4.30"
flate2 = "1.0.27"
oauth2 = "4.4.2"
