[package]
name = "logsh-core"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { version = "1.3.1" }
home = "0.5.11"
log = { version = "0.4.27" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["serde"] }
chrono = "0.4.41"
flate2 = "1.1.2"
oauth2 = { version = "5.0.0", features = ["reqwest", "reqwest-blocking"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
gethostname = "1.0.2"
