[package]
name = "logsh-core"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { version = "1.4.0" }
home = "0.5.12"
log = { version = "0.4.29" }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["serde"] }
chrono = "0.4.44"
oauth2 = { version = "5.0.0", default-features = false, features = ["reqwest", "reqwest-blocking", "rustls-tls"] }
gethostname = "1.1.0"
